# custom_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/custom_api/: main.py
src/custom_api/api/: text_api.py
src/custom_api/core/: llm_handler.py  text_processor.py
src/custom_api/utils/: prompts.py  tools.py
